force-app/main/default/objects/PriceRuleAction__c/PriceRuleAction__c.object-meta.xml
<CustomObject>
    <label>Price Rule Action</label>
    <nameField>
        <displayFormat>PRA-{0000000}</displayFormat>
        <label>Price Rule Action</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Rule Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>