force-app/main/default/objects/PriceRuleAction__c/fields/AppliedTo__c.field-meta.xml
<CustomField>
    <fullName>AppliedTo__c</fullName>
    <label>Applied To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cost</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>